buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:10.0.3'
    }
}

plugins {
  id 'application'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.5'
  id 'org.springframework.boot' version '3.1.12'
  id 'com.github.ben-manes.versions' version '0.51.0'
  id 'org.sonarqube' version '5.0.0.4638'
  id 'uk.gov.hmcts.java' version '0.12.63'
}

apply plugin: 'org.owasp.dependencycheck'

group = 'uk.gov.hmcts.reform.ccd'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

sourceSets {
  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }

  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

test {
  failFast = true
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  useJUnitPlatform{
    includeTags 'integration'
  }
  // set your environment variables here
  environment("WIREMOCK_SERVER_MAPPINGS_PATH", "wiremock")
}

task smoke(type: Test) {
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
  useJUnitPlatform {
    includeTags 'smoke'
  }
}

task functional(type: Test) {
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  useJUnitPlatform {
    includeTags 'functional'
  }
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

check.dependsOn integration

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: ccd-test-stubs-service"
    property "sonar.projectKey", "uk.gov.hmcts.reform:ccd-test-stubs-service"
    property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/test.exec"
    property "sonar.jacoco.itReportPath", "${project.buildDir}/jacoco/integration.exec"
    property "sonar.junit.reportPaths", "${project.buildDir}/test-results/junit-platform"
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
  }
}

dependencyUpdates.resolutionStrategy = {
  componentSelection { rules ->
    rules.all { ComponentSelection selection ->
      boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
        selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
      }
      if (rejected) {
        selection.reject('Release candidate')
      }
    }
  }
}

apply from: './gradle/suppress.gradle'
dependencyCheck {
  suppressionFile = 'dependency-check-suppressions.xml'
  nvd {
    delay = 5000
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url 'https://jitpack.io'
  }
}

ext {
  junitVersion = '5.3.2'
  groovyVersion = '4.0.21'
  restAssuredVersion = '5.3.2'
  tomcatVersion = '10.1.25'
  jettyVersion = '11.0.20'
  springCloudVersion = '2022.0.5'
}

ext['spring-framework.version'] = '6.0.21'
ext['spring-security.version'] = '6.0.8'
ext['log4j2.version'] = '2.23.1'
ext['jackson.version'] = '2.16.0'
ext['snakeyaml.version'] = '2.2'

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

configurations.all {
  exclude group: 'ch.qos.logback', module: 'logback-core'
  exclude group: 'ch.qos.logback', module: 'logback-classic'
}

dependencies {

  // SPRING
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter'
  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'
  //implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
  implementation group: 'org.springframework.security', name: 'spring-security-crypto'
  implementation group: 'org.springframework.security', name: 'spring-security-rsa'
  
  implementation group: 'com.google.guava', name: 'guava', version:'32.1.2-jre'
  implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'

  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: tomcatVersion
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-el', version: tomcatVersion
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: tomcatVersion

  // CVE-2021-28170
  implementation group: 'jakarta.el', name: 'jakarta.el-api', version: '5.0.1'

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.4'

  implementation group: 'org.wiremock', name: 'wiremock-standalone', version: '3.0.3'
  implementation group: 'com.github.jknack', name: 'handlebars', version: '4.3.1'

  implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-client', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-java-client', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-java-server', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-util', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-util-ajax', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-xml', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-client', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-security', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-http', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-io', version: jettyVersion
  implementation group: 'org.eclipse.jetty.http2', name: 'http2-server', version: jettyVersion
  implementation group: 'org.eclipse.jetty.http2', name: 'http2-common', version: jettyVersion
  implementation group: 'org.eclipse.jetty.http2', name: 'http2-hpack', version: jettyVersion

  implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-servlets', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-webapp', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-proxy', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-server', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-conscrypt-server', version: jettyVersion
  implementation group: 'org.eclipse.jetty', name: 'jetty-alpn-conscrypt-client', version: jettyVersion

  implementation group: 'org.apache.groovy', name: 'groovy-json', version: groovyVersion
  implementation group: 'org.apache.groovy', name: 'groovy', version: groovyVersion
  implementation group: 'org.apache.groovy', name: 'groovy-xml', version: groovyVersion

  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '7.9'
  implementation group: 'net.minidev', name: 'json-smart', version: '2.4.11'

  // CCD-3511 CVE-2020-15522
  implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15to18', version: '1.77'

  implementation('org.bouncycastle:bcpkix-jdk18on') {
    version {
      strictly '1.77'
    }
  }

  implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
  implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
  implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'

  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitVersion
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitVersion
  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion

  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: restAssuredVersion, {
    exclude group: 'org.apache.sling', module: 'org.apache.sling.javax.activation'
    exclude group: 'org.codehaus.grooy'
  }
  testImplementation group: 'io.rest-assured', name: 'json-path', version: restAssuredVersion, {
    exclude group: 'org.codehaus.grooy'
  }
  testImplementation group: 'io.rest-assured', name: 'xml-path', version: restAssuredVersion, {
    exclude group: 'org.apache.sling', module: 'org.apache.sling.javax.activation'
    exclude group: 'org.codehaus.grooy'
  }

  testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.1'
  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath
}

test {
  useJUnitPlatform()
  failFast = true
}

application {
  mainClass = 'uk.gov.hmcts.reform.ccd.test.stubs.service.Application'
}

bootJar {
  archiveFileName = 'ccd-test-stubs-service.jar'

  manifest {
    attributes('Implementation-Title': project.name)
    attributes('Implementation-Version': project.version.toString())
  }
  from('wiremock/mappings') {
    into 'wiremock/mappings'
  }
}

// for cnp pipeline
task dependencyCheck(dependsOn: dependencyCheckAnalyze)

task fortifyScan(type: JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
  // The line below prevents the build from failing if the Fortify scan detects issues
  ignoreExitValue = true
}
